fixed overall footer padding. Fixed search display on tablet/mobile

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ a {
 }
 
 .app {
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 100dvw;
   color: white;
   background: radial-gradient(
